# ilmarien

./: .gitignore  Cargo.toml
src/: carto.rs  cartography.rs  climate.rs  geology.rs  imaging.rs  insolation.rs  lib.rs  main.rs  regression.rs  units.rs  util.rs  vars.rs
src/carto/: brane.rs  brane.rs.bak  colour.rs  datum.rs  flux.rs  honeycomb.rs  render.rs
src/cartography/: brane.rs  colour.rs  hexagonos.rs
src/climate/: chart.rs  circulation.rs  cosmos.rs  geology.rs  hydrology.rs  koppen.rs  legacy--radiation_watchly.rs  legacy--surface.rs  radiation.rs  radiation_watchly.rs  regression.rs  simulation.rs  surface.rs  vegetation.rs
src/imaging/: cartography.rs  colour.rs  hexagonos.rs  render.rs
src/util/: .constants.rs.swp  constants.rs  diffusion.rs
