[package]
name = "ilmarien"
version = "0.1.0"
authors = ["Filip Øskar Przybycień <filip.oskar@zohomail.eu>"]
edition = "2018"

[dependencies]
# base
log = "0.4.14"
pretty_env_logger = "0.4.0"
rayon = "1.5.1"
num-traits = "0.2.14"

# rendering
tiff = "0.7"
svg = "0.10.0"

# geography
geo = "0.18.0"
geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }
geo-types = "0.7.2"
geo-svg = "0.5.0"
petgraph = "0.6.0"
noise = "0.7"
splines = "4.0.0"
nalgebra = "0.28.0"

[dev-dependencies]
float_eq = "0.6"
