[package]
name = "ilmarien"
version = "0.1.0"
authors = ["Filip Øskar Przybycień <filip.oskar@zohomail.eu>"]
edition = "2021"

[dependencies]
# base
log = "0.4"
pretty_env_logger = "0.4"
rayon = { version = "1.5.3", default-features = false }
itertools = "0.10"
num-traits = "0.2"
ord_subset = "3.1"

# rendering
tiff = "0.7"
svg = "0.10"

# geography
geo = { version = "0.18", default-features = false }
geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }
geo-svg = "0.5"
petgraph = "0.6"
nalgebra = "0.31"
noise = { version = "0.7", default-features = false }
splines = "4.1"

[dev-dependencies]
float_eq = "1.0"
